:ambulance: Fix overflow bug

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -51,6 +51,9 @@
 #full {
   min-height: 100%;
 }
+.katex .katex-mathml {
+  display: none;
+}
 // Animation
 @keyframes fadeIn {
   from {
